tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_composite_write_failure/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:2:5
  │
2 │     a[i] = (7, true);
  │     ----
  │
  = Call stack:
    1: main
            at src/main.nr:2:5

Failed assertion
